--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -4,5 +4,14 @@ html {
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 1.6rem;
+  font-size: $m-size;
+  background-color: #333745;
+}
+
+button {
+  cursor: pointer;
+
+  &:disabled {
+    cursor: default;
+  }
 }
