--- a/src/styles/components/_option.scss
+++ b/src/styles/components/_option.scss
@@ -1,4 +1,4 @@
-// 
+//
 .option {
   border-bottom: 1px solid lighten($light-blue, 10%);
   display: flex;
@@ -10,5 +10,6 @@
     font-weight: 500;
     font-size: 2rem;
     margin: 0;
+    word-break: break-all;
   }
 }
