apply prettier rules to all project files.

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -2,7 +2,7 @@
 .big-button {
   background: $purple;
   border: none;
-  border-bottom: .6rem solid darken($purple, 10%);
+  border-bottom: 0.6rem solid darken($purple, 10%);
   color: white;
   font-weight: bold;
   font-size: $l-size;
@@ -11,7 +11,7 @@
   width: 100%;
 
   &:disabled {
-    opacity: .5;
+    opacity: 0.5;
   }
 }
 
@@ -19,7 +19,7 @@
 .button {
   background: $purple;
   border: none;
-  border-bottom: .3rem solid darken($purple, 10%);
+  border-bottom: 0.3rem solid darken($purple, 10%);
   color: white;
   font-weight: 500;
   padding: $s-size;
