--- a/src/styles/components/_add-option.scss
+++ b/src/styles/components/_add-option.scss
@@ -8,6 +8,7 @@
 
   &__form {
     display: flex;
+    flex-direction: column;
     padding: $m-size;
 
     &__input {
@@ -16,8 +17,20 @@
       color: $off-white;
       border-bottom: 0.3rem solid darken($dark-blue, 10%);
       flex-grow: 1;
-      margin-right: $s-size;
+      margin: 0 0 $s-size 0;
+
       padding: $s-size;
+    }
+  }
+}
+
+@media (min-width: $desktop-breakpoint) {
+  .add-option {
+    &__form {
+      flex-direction: row;
+      &__input {
+        margin: 0 $s-size 0 0;
+      }
     }
   }
 }
